# fvr

./: .rustfmt.toml  .taplo.toml  .yamlfmt.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
docs/: LICENSE-HEADER
src/: arguments.rs  display.rs  error.rs  files.rs  main.rs  section.rs
src/arguments/: model.rs  parse.rs  schema.rs
src/command/: list.rs  tree.rs
src/display/: mode.rs  name.rs  size.rs  time.rs  user.rs
src/files/: filter.rs  sort.rs
src/section/: mode.rs  name.rs  size.rs  time.rs  tree.rs  user.rs
