# SPDX-License-Identifier: AGPL-3.0-or-later
# 
# Copyright © 2025 Jaxydog
# 
# This file is part of fvr.
# 
# fvr is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public
# License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later
# version.
# 
# fvr is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License along with fvr. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "fvr"
description = "An implementation of the `ls` command-line application."
authors = ["Jaxydog"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["ls", "unix"]

version = "0.1.0"
edition = "2024"

license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Jaxydog/fvr"

[dependencies]
itoa = "~1.0"
owo-colors = "~4.1"
ryu = "~1.0"
supports-color = "~3.0"
time = { version = "~0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "~2.0"
